# rusty_wordle

./: Cargo.toml  LICENSE-MIT.md  README.md
src/: correctness.rs  game.rs  guess.rs  lib.rs  macros.rs  main.rs  utils.rs
