[package]
name = "rusty_wordle"
version = "1.0.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Play Worlde in the terminal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
lazy_static = "1.4.0"
rand = "0.8.4"
regex = "1"
